--- a/PALS/res/menu/main.xml
+++ b/PALS/res/menu/main.xml
@@ -13,5 +13,9 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="About"/>
+      <item
+        android:id="@+id/action_add_location"
+        android:showAsAction="always"
+        android:title="Add Location"/>
 
 </menu>
