--- a/PALS/res/layout/activity_menu.xml
+++ b/PALS/res/layout/activity_menu.xml
@@ -9,7 +9,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:paddingLeft="20dp"
-        android:id="@+id/btnShowMaps"
+        android:id="@+id/findATM"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="left|center_vertical"
