--- a/PALS/res/layout/list_item.xml
+++ b/PALS/res/layout/list_item.xml
@@ -3,11 +3,23 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
-
+	
+    <TextView
+        android:id="@+id/placeLat"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+    
+    <TextView
+        android:id="@+id/placeLong"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+    
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
 
@@ -23,16 +35,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="distance"
-            android:textSize="14sp"
+            android:textSize="13sp"
 			android:textColor="#000000" />
     </LinearLayout>
 
     <LinearLayout
         android:paddingBottom="10dp"
-        android:paddingTop="5dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:gravity="left|center_vertical"
         android:orientation="vertical" >
 
@@ -43,7 +54,7 @@
             android:paddingLeft="6dip"
             android:paddingTop="6dip"
             android:text="name"
-            android:textSize="16sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:textColor="#000000" />
 
@@ -54,7 +65,7 @@
             android:paddingLeft="6dip"
             android:paddingTop="6dip"
             android:text="address"
-            android:textSize="15sp"            
+            android:textSize="13sp"            
             android:textColor="#000000" />
     </LinearLayout>
 
