--- a/PALS/res/layout/list_result_activity.xml
+++ b/PALS/res/layout/list_result_activity.xml
@@ -21,5 +21,6 @@
 	<ListView
 		android:id="@android:id/list"
         android:layout_height="wrap_content"
-      	android:layout_width="fill_parent" />
+      	android:layout_width="fill_parent"
+      	android:layout_marginTop="5dp" />
 </LinearLayout>
