--- a/PALS/res/menu/main.xml
+++ b/PALS/res/menu/main.xml
@@ -16,6 +16,7 @@
       <item
         android:id="@+id/action_add_location"
         android:showAsAction="always"
-        android:title="Add Location"/>
+        android:title="Add Location"
+        android:icon="@drawable/icbutton_add"/>
 
 </menu>
