--- a/PALS/res/drawable/border.xml
+++ b/PALS/res/drawable/border.xml
@@ -2,12 +2,12 @@
  <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
   <item> 
     <shape android:shape="rectangle">
-      <solid android:color="#aeaeae" /> 
+      <solid android:color="#666666" /> 
     </shape>
   </item>   
-    <item android:left="2dp" android:right="2dp" android:top="2dp" android:bottom="2dp">  
+    <item android:left="1dp" android:right="1dp" android:top="1dp" android:bottom="1dp">  
      <shape android:shape="rectangle">
-         <solid android:color="#ffffff" />
+         <solid android:color="#e6e6e6" />
     </shape>
    </item>    
  </layer-list> 
