--- a/PALS/res/layout/find_gas_station.xml
+++ b/PALS/res/layout/find_gas_station.xml
@@ -2,45 +2,78 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e6e6e6"
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/gasStationLbl"
         style="@style/BlackText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="20dp"
         android:text="Find Gas Station"
         android:textSize="24sp" />
+    
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin= "15dp"
+        android:background="@drawable/spinner_border"
+        android:orientation="horizontal" >
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:background="#aeaeae"
-        android:layout_marginBottom="15dp" />
+        <Spinner
+            android:id="@+id/spr_company"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:spinnerMode="dropdown" />
 
-    <Spinner
-        android:id="@+id/spr_company"
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:src="@drawable/dropdown" />
+    </RelativeLayout>
+    
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" />
+        android:background="@drawable/spinner_border"
+        android:orientation="horizontal" >
 
-    <Spinner
-        android:id="@+id/spr_radius"
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:layout_marginBottom="25dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" />
+        <Spinner
+            android:id="@+id/spr_radius"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:spinnerMode="dropdown" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:src="@drawable/dropdown" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/gasStationFindButton"
         style="@style/WhiteText"
-        android:layout_width="fill_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/custom_button"
-        android:text="Find" />
+        android:background="@drawable/rounded_button"
+        android:text="Find"
+        android:textColor="#66bb6a" />
 
 </LinearLayout>
