--- a/PALS/res/layout/activity_list_result.xml
+++ b/PALS/res/layout/activity_list_result.xml
@@ -2,8 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#e6e6e6" >
     
+    <TextView
+        android:id="@+id/resultLbl"
+        style="@style/BlackText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
+        android:layout_marginTop="15dp"
+        android:text="Result"
+        android:textSize="28sp" />
+    
+    <View 
+	   android:layout_width="fill_parent"
+	   android:layout_height="2dp"       
+	   android:background="#dbdbdb"/> 
+	   
     <RelativeLayout 
         android:id="@+id/no_data_layout"
         android:layout_width="match_parent"
@@ -13,14 +29,13 @@
 	        android:id="@+id/label_no_data"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="Place Not Found"
-	        android:textSize="18sp"
+	        android:text="No Result"
+	        android:textSize="24sp"
 	        android:layout_centerInParent="true"/>
     </RelativeLayout>
     
 	<ListView
 		android:id="@android:id/list"
         android:layout_height="wrap_content"
-      	android:layout_width="fill_parent"
-      	android:layout_marginTop="5dp" />
+      	android:layout_width="fill_parent" />
 </LinearLayout>
