--- a/PALS/res/layout/list_item.xml
+++ b/PALS/res/layout/list_item.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/icbutton_location" />
 
         <TextView
             android:id="@+id/placeDistance"
