--- a/PALS/res/layout/list_item.xml
+++ b/PALS/res/layout/list_item.xml
@@ -31,7 +31,7 @@
             android:src="@drawable/icbutton_location" />
 
         <TextView
-            android:id="@+id/placeDistance"
+            android:id="@+id/placeRadius"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="distance"
