--- a/PALS/res/layout/form_atm.xml
+++ b/PALS/res/layout/form_atm.xml
@@ -41,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
+            android:inputType="text"
             android:background="#ffffff" />
     </LinearLayout>
 
