--- a/PALS/res/layout/find_gas_station.xml
+++ b/PALS/res/layout/find_gas_station.xml
@@ -65,15 +65,21 @@
             android:src="@drawable/dropdown" />
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/gasStationFindButton"
-        style="@style/WhiteText"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
+    <LinearLayout 
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_button"
-        android:text="Find"
-        android:textColor="#66bb6a" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
+        
+	    <Button
+	        android:id="@+id/gasStationFindButton"
+	        style="@style/WhiteText"
+	        android:layout_gravity="center"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:background="@drawable/rounded_button"
+	        android:text="Find"
+	        android:textColor="#66bb6a" />
+	</LinearLayout>
 
 </LinearLayout>
