--- a/PALS/res/layout/form_gas_station.xml
+++ b/PALS/res/layout/form_gas_station.xml
@@ -33,7 +33,7 @@
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:text="Gas Station Name"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/gasStationNameText"
@@ -65,7 +65,7 @@
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:text="Company"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -96,7 +96,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
@@ -114,7 +114,7 @@
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:text="Address"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/gasStationAddressText"
@@ -127,16 +127,22 @@
             android:lines="3" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/gasStationSubmitButton"
-        style="@style/WhiteText"
-        android:layout_width="wrap_content"
+    <LinearLayout 
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/rounded_button"
-        android:text="Submit"
-        android:textSize="14sp"
-        android:textColor="#66bb6a" />
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
+	    <Button
+	        android:id="@+id/gasStationSubmitButton"
+	        style="@style/WhiteText"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center"
+	        android:layout_marginTop="20dp"
+	        android:background="@drawable/rounded_button"
+	        android:text="Submit"
+	        android:textSize="18sp"
+	        android:textColor="#66bb6a" />
+ 	</LinearLayout>
 
 </LinearLayout>
