--- a/PALS/res/layout/list_item.xml
+++ b/PALS/res/layout/list_item.xml
@@ -2,8 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp" >
 	
+    <TextView
+        android:id="@+id/placePhone"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:visibility="gone" />
+    
     <TextView
         android:id="@+id/placeLat"
         android:layout_width="fill_parent"
@@ -24,8 +33,8 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:src="@drawable/icbutton_location" />
@@ -40,7 +49,6 @@
     </LinearLayout>
 
     <LinearLayout
-        android:paddingBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
@@ -53,7 +61,6 @@
             android:layout_height="wrap_content"
         	android:layout_marginRight="10dp"
             android:paddingLeft="6dip"       
-            android:paddingTop="6dip"
             android:text="name"
             android:textSize="15sp"
             android:textStyle="bold"
@@ -67,7 +74,7 @@
             android:paddingLeft="6dip"
             android:paddingTop="6dip"
             android:text="address"
-            android:textSize="13sp"            
+            android:textSize="14sp"            
             android:textColor="#000000" />
     </LinearLayout>
 
