Change layout according to the newest assets

--- a/PALS/res/layout/form_atm.xml
+++ b/PALS/res/layout/form_atm.xml
@@ -21,10 +21,8 @@
         android:orientation="horizontal" >
 
         <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:scaleType="fitCenter"
             android:src="@drawable/icbutton_location" />
 
@@ -53,10 +51,8 @@
         android:orientation="horizontal" >
 
         <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:scaleType="fitCenter"
             android:src="@drawable/icbutton_location" />
 
@@ -102,10 +98,8 @@
         android:orientation="horizontal" >
 
         <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:scaleType="fitCenter"
             android:src="@drawable/icbutton_location" />
 
