--- a/PALS/res/layout/list_item.xml
+++ b/PALS/res/layout/list_item.xml
@@ -2,9 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp" >
+    android:orientation="horizontal">
 	
     <TextView
         android:id="@+id/placePhone"
@@ -33,8 +31,8 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:src="@drawable/icbutton_location" />
@@ -52,6 +50,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
+	    android:paddingTop="8dp"
+	    android:paddingBottom="8dp" 
         android:gravity="left|center_vertical"
         android:orientation="vertical" >
 
