--- a/PALS/res/layout/list_item_category.xml
+++ b/PALS/res/layout/list_item_category.xml
@@ -7,13 +7,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
 
         <ImageView
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp" 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
@@ -28,7 +27,7 @@
             android:paddingLeft="6dip"       
             android:paddingTop="6dip"
             android:text="name"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="#000000" />
 
