--- a/PALS/res/layout/form_atm.xml
+++ b/PALS/res/layout/form_atm.xml
@@ -30,7 +30,7 @@
             android:id="@+id/newATMNameLbl"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:text="ATM Name"
+            android:text="ATM Name *"
             android:textSize="16sp" />
 
         <EditText
@@ -60,7 +60,7 @@
             android:id="@+id/newBankNameLbl"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:text="Bank Name"
+            android:text="Bank Name *"
             android:textSize="16sp" />
 
         <RelativeLayout
@@ -107,7 +107,7 @@
             android:id="@+id/newATMAddressLbl"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:text="Address"
+            android:text="Address *"
             android:textSize="16sp" />
 
         <EditText
