--- a/PALS/res/layout/form_gas_station.xml
+++ b/PALS/res/layout/form_gas_station.xml
@@ -30,7 +30,7 @@
             android:id="@+id/newGasStationNameLbl"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:text="Gas Station Name"
+            android:text="Gas Station Name *"
             android:textSize="16sp" />
 
         <EditText
@@ -60,7 +60,7 @@
             android:id="@+id/newCompanyLbl"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:text="Company"
+            android:text="Company *"
             android:textSize="16sp" />
 
         <RelativeLayout
@@ -107,7 +107,7 @@
             android:id="@+id/newGasStationAddressLbl"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:text="Address"
+            android:text="Address *"
             android:textSize="16sp" />
 
         <EditText
