--- a/PALS/res/layout/dialog_info_location2.xml
+++ b/PALS/res/layout/dialog_info_location2.xml
@@ -64,6 +64,27 @@
                     android:text="Address"
                     android:textSize="14sp" />
             </LinearLayout>
+            
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/tv_phone_lbl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/phonetab"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/tv_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Telephone"
+                    android:textSize="14sp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -107,6 +128,22 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_button"
                 android:text="Direction"
+                android:textColor="#66bb6a"
+                android:textSize="13sp" />
+        </LinearLayout>
+        
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp" >
+
+            <Button
+                android:id="@+id/btn_call"
+                style="@style/WhiteText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_button"
+                android:text="Call"
                 android:textColor="#66bb6a"
                 android:textSize="13sp" />
         </LinearLayout>
