--- a/PALS/res/layout/help.xml
+++ b/PALS/res/layout/help.xml
@@ -23,6 +23,7 @@
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="15dp"
             android:orientation="vertical">
             
             <LinearLayout 
@@ -38,8 +39,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="15dp"
-                    android:text="Help1"
-                    android:textSize="18sp"
+                    android:text="@string/helpitem1"
+                    android:textSize="16sp"
                     android:textStyle="bold"/>
             </LinearLayout>
             
@@ -59,8 +60,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="15dp"
-                    android:text="Help Description 1"
-                    android:textSize="16sp"/>
+                    android:text="@string/helpdescitem1"
+                    android:textSize="14sp"/>
             </LinearLayout>
             
             <LinearLayout 
@@ -69,15 +70,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/side_border"
+                android:background="@drawable/side_border_bottom"
                 android:orientation="vertical">
                 <TextView 
                     android:id="@+id/help2Lbl"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="15dp"
-                    android:text="Help2"
-                    android:textSize="18sp"
+                    android:text="@string/helpitem2"
+                    android:textSize="16sp"
                     android:textStyle="bold"/>
             </LinearLayout>
             
@@ -97,8 +98,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="15dp"
-                    android:text="Help Description 2"
-                    android:textSize="16sp"/>
+                    android:text="@string/helpdescitem2"
+                    android:textSize="14sp"/>
             </LinearLayout>
             
             <LinearLayout 
@@ -107,15 +108,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/border"
+                android:background="@drawable/side_border_bottom"
                 android:orientation="vertical">
                 <TextView 
                     android:id="@+id/help3Lbl"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="15dp"
-                    android:text="Help3"
-                    android:textSize="18sp"
+                    android:text="@string/helpitem3"
+                    android:textSize="16sp"
                     android:textStyle="bold"/>
             </LinearLayout>
             
@@ -135,8 +136,84 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="15dp"
-                    android:text="Help Description 3"
-                    android:textSize="16sp"/>
+                    android:text="@string/helpdescitem3"
+                    android:textSize="14sp"/>
+            </LinearLayout>
+            
+            <LinearLayout 
+                android:id="@+id/help4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/side_border_bottom"
+                android:orientation="vertical">
+                <TextView 
+                    android:id="@+id/help4Lbl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:text="@string/helpitem4"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+            
+            <LinearLayout 
+                android:id="@+id/helpDesc4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/border"
+                android:orientation="vertical"
+                android:visibility="gone">
+                <TextView 
+                    android:id="@+id/helpDesc4Lbl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:text="@string/helpdescitem4"
+                    android:textSize="14sp"/>
+            </LinearLayout>
+            
+            <LinearLayout 
+                android:id="@+id/help5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/side_border_bottom"
+                android:orientation="vertical">
+                <TextView 
+                    android:id="@+id/help5Lbl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:text="@string/helpitem5"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+            
+            <LinearLayout 
+                android:id="@+id/helpDesc5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/border"
+                android:orientation="vertical"
+                android:visibility="gone">
+                <TextView 
+                    android:id="@+id/helpDesc5Lbl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:text="@string/helpdescitem5"
+                    android:textSize="14sp"/>
             </LinearLayout>
         </LinearLayout>
         
