Change marker icon

--- a/PALS/res/menu/action_bar_maps.xml
+++ b/PALS/res/menu/action_bar_maps.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/gotoCurrentLocation"
-        android:icon="@drawable/ic_mapmarker"
+        android:icon="@drawable/icbutton_current"
         android:showAsAction="always"
         android:title="My position"/>
     
